src/test/ui/associated-types/associated-types-unconstrained.stderr
error[E0283]: type annotations needed
  --> $DIR/associated-types-unconstrained.rs:14:20
   |
LL |     let x: isize = Foo::bar();
   |                    ^^^^^^^^ cannot call trait method as a free function

error: aborting due to previous error

For more information about this error, try `rustc --explain E0283`.
